# posix-bsp-perf

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.base  Makefile  Makefile.build  README.md  case.build.mk  cross_compile_build.sh  get_build_env_docker.sh  local_env_pkgs_intall.sh  pkg_dep_install.sh  reference_build_cmd.sh
3rd_pkg_cases/: CMakeLists.txt
3rd_pkg_cases/cli11/: CMakeLists.txt  main.cpp
3rd_pkg_cases/cuda/: CMakeLists.txt
3rd_pkg_cases/cuda/bandwidthTest/: CMakeLists.txt
3rd_pkg_cases/cuda/cmake/: aarch64-linux-gnu.cmake
3rd_pkg_cases/cuda/convolutionSeparable/: CMakeLists.txt
3rd_pkg_cases/cuda/deviceQuery/: CMakeLists.txt
3rd_pkg_cases/cuda/deviceQueryDrv/: CMakeLists.txt
3rd_pkg_cases/qt5/status_bar/: CMakeLists.txt
bsp/: CMakeLists.txt  CODE_REVIEW.md
bsp/bsp_codec/: CMakeLists.txt  IDecoder.cpp  IDecoder.hpp  IEncoder.cpp  IEncoder.hpp
bsp/bsp_codec/video/: nvVideoDec.cpp  nvVideoDec.hpp  nvVideoEnc.cpp  nvVideoEnc.hpp  rkmppDec.cpp  rkmppDec.hpp  rkmppEnc.cpp  rkmppEnc.hpp
bsp/bsp_container/: CMakeLists.txt  ContainerHeader.hpp  IDemuxer.hpp  IMuxer.hpp  StreamReader.hpp  StreamWriter.hpp
bsp/bsp_container/demuxer/: FFmpegDemuxer.cpp  FFmpegDemuxer.hpp  IDemuxer.cpp
bsp/bsp_container/impl/: IDemuxer.cpp  IMuxer.cpp
bsp/bsp_container/muxer/: FFmpegMuxer.cpp  FFmpegMuxer.hpp  IMuxer.cpp
bsp/bsp_dnn/: CMakeLists.txt  IDnnEngine.hpp  IDnnObjDetectorPlugin.hpp  dnnObjDetector.cpp  dnnObjDetector.hpp
bsp/bsp_dnn/dnnEngine_impl/: CMakeLists.txt  IDnnEngine.cpp
bsp/bsp_dnn/dnnObjDetector_plugins/: CMakeLists.txt
bsp/bsp_egl/: CMakeLists.txt  Cpu2dGraphics.cpp  Cpu2dGraphics.hpp  RenderEGL.cpp  RenderEGL.hpp
bsp/bsp_g2d/: BufferHelper.hpp  BytesPerPixel.hpp  CMakeLists.txt  IGraphics2D.hpp
bsp/bsp_g2d/impl/: G2DBufferInternal.hpp  IGraphics2D.cpp
bsp/bsp_image/: ImageBuffer.hpp  ImageFormat.hpp  ImageTypes.hpp  OpenCvImageAdapter.hpp
bsp/bsp_sockets/: BspSocket.hpp  CMakeLists.txt  TcpClient.hpp
bsp/bsp_sockets/impl/: EventLoopEpoll.cpp  EventLoopLibevent.cpp  EventLoopLibevent.hpp  EventLoopPoll.cpp  IOBuffer.cpp  TcpClient.cpp  TcpConnection.cpp  TcpConnection.hpp  TcpServer.cpp  ThreadPool.hpp  ThreadQueue.hpp  UdpClient.cpp  UdpServer.cpp
bsp/image/: CMakeLists.txt  ImageFormat.hpp  ImageTypes.hpp
bsp/profiler/: PerfProfiler.hpp
bsp/protocol/: CMakeLists.txt  RtpHeader.hpp  RtpReader.cpp  RtpReader.hpp
bsp/shared/: ArgParser.hpp  BspFileUtils.cpp  BspFileUtils.hpp  BspLogger.cpp  BspTimeUtils.hpp  CMakeLists.txt  ImageTypes.hpp
bsp_cases/: CMakeLists.txt
bsp_cases/asyncio_sockets/: CMakeLists.txt  aio_tcpserver.cpp  aio_udpclient.cpp  aio_udpclient.ini
bsp_cases/ddr_bandwidth/: CMakeLists.txt
bsp_cases/demux_mux/: DemuxApp.hpp  MuxApp.hpp  demux.ini  main.cpp  mux.ini
bsp_cases/dnn_objDetect/: CMakeLists.txt  dnn.ini  main.cpp  objDetectApp.hpp  trt_dnn.ini
bsp_cases/egl_render/: CMakeLists.txt  EglRenderApp.cpp  EglRenderApp.hpp  main.cpp
bsp_cases/hello_world/: hello.ini
bsp_cases/json_parse/: CMakeLists.txt  carla-vehicle-view.json  main.cpp
bsp_cases/video_dec_enc/: CMakeLists.txt  DecodeApp.hpp  EncodeApp.hpp  README.md  decode.ini  encode.ini
bsp_cases/video_objDetect/: CMakeLists.txt  VideoDetectApp.hpp  jetson_video_dnn.ini  rk35xx_video_dnn.ini
features/svs/: CMakeLists.txt  ISurroundView.cpp  ISurroundView.hpp  SurroundView.hpp  SvsBlender.cpp  SvsBlender.hpp  SvsCalibrator.cpp  SvsParamLoader.cpp  SvsProjector.cpp  SvsProjector.hpp  SvsTypes.hpp
midware/zeromq_ipc/: CMakeLists.txt  sharedMemPublisher.cpp  sharedMemPublisher.hpp  sharedMemSubscriber.cpp  sharedMemSubscriber.hpp  zmqPublisher.cpp  zmqPublisher.hpp  zmqSubscriber.cpp  zmqSubscriber.hpp
perf_cases/asyncio_sockets/: CMakeLists.txt  aio_tcpclient.cpp  aio_tcpclient.ini  aio_tcpserver.cpp  aio_udpclient.cpp  aio_udpserver.cpp
perf_cases/ddr_bandwidth/: CMakeLists.txt  ddrPerf.cpp  ddrPerf.hpp  main.cpp
perf_cases/dnn_objDetect/: CMakeLists.txt  README.md  main.cpp  objDetectApp.hpp
samples/: CMakeLists.txt
samples/bsp/: CMakeLists.txt
samples/bsp/asyncio_sockets/: aio_tcpserver.ini  aio_udpserver.ini
samples/bsp/ddr_bandwidth/: main.cpp
samples/bsp/demux_mux/: CMakeLists.txt  DemuxApp.hpp  demux.ini  mux.ini
samples/bsp/dnn_objDetect/: README.md  dnn.ini  labels.txt  main.cpp  objDetectApp.hpp  trt_dnn.ini
samples/bsp/egl_render/: EglRenderApp.cpp  EglRenderApp.hpp  egl_render.ini  main.cpp
samples/bsp/hello_world/: CMakeLists.txt  HelloPerf.hpp  main.cpp
samples/bsp/json_parse/: CMakeLists.txt
samples/bsp/video_dec_enc/: CMakeLists.txt  DecodeApp.hpp  EncodeApp.hpp  decode.ini  main.cpp
samples/bsp/video_objDetect/: CMakeLists.txt  README.md  VideoDetectApp.hpp  jetson_video_dnn.ini  main.cpp  video_dnn.ini
samples/features/: CMakeLists.txt
samples/features/svs_view/: CMakeLists.txt  SvsViewApp.cpp
samples/midware/: CMakeLists.txt
samples/midware/zmq_pub_sub/: CMakeLists.txt  pub_main.cpp
samples/midware/zmq_shmem/: CMakeLists.txt  shmem_sub.cpp
src/: CMakeLists.txt
src/bsp_codec/: CMakeLists.txt  IDecoder.cpp  IDecoder.hpp  IEncoder.cpp  IEncoder.hpp
src/bsp_codec/video/: rkmppCodecHeader.hpp  rkmppDec.cpp  rkmppEnc.cpp  rkmppEnc.hpp
src/bsp_dnn/: CMakeLists.txt  IDnn.hpp  IDnnEngine.hpp  IDnnObjDetectorPlugin.hpp  dnnObjDetector.cpp  dnnObjDetector.hpp
src/bsp_g2d/: CMakeLists.txt  IGraphics2D.hpp
src/bsp_sockets/: BspSocket.hpp  CMakeLists.txt  EasyReactor.hpp  EventLoop.hpp  EventLoopEpoll.hpp  EventLoopPoll.hpp  EventLoop_Epoll.hpp  EventLoop_Poll.hpp  IEventLoop.hpp  ISocketConnection.hpp  README.md  TcpClient.hpp  TcpServer.hpp  ThreadQueue.hpp  UdpClient.hpp  UdpServer.hpp
src/framework/: BasePerfCase.cpp  BasePerfCase.hpp  CMakeLists.txt
src/profiler/: BspTrace.cpp  BspTrace.hpp  CMakeLists.txt  PerfProfiler.cpp  PerfProfiler.hpp
src/shared/: ArgParser.hpp  BspLogger.cpp  BspLogger.hpp  CMakeLists.txt
temp/: CMakeLists.txt  case.build.mk  lib.build.mk
temp/common-lib/: bsp_perf_event.c
temp/include/: bsp_fb.h  bsp_perf_event.h  bsp_v4l2_cap.h
(+296 files in other folders)
